# rust-sitter

./: Cargo.toml  README.md
common/: Cargo.toml
common/src/: expansion.rs  lib.rs
example/: Cargo.toml  build.rs
example/src/: arithmetic.rs  main.rs  optionals.rs  repetitions.rs  words.rs
example/src/snapshots/: rust_sitter_example__arithmetic__tests__failed_parses-2.snap  rust_sitter_example__arithmetic__tests__failed_parses-3.snap  rust_sitter_example__arithmetic__tests__failed_parses-4.snap  rust_sitter_example__arithmetic__tests__failed_parses.snap  rust_sitter_example__arithmetic__tests__failed_parses.snap.new  rust_sitter_example__optionals__tests__optional_grammar-2.snap  rust_sitter_example__optionals__tests__optional_grammar-3.snap  rust_sitter_example__optionals__tests__optional_grammar-3.snap.new  rust_sitter_example__optionals__tests__optional_grammar-4.snap  rust_sitter_example__optionals__tests__optional_grammar-5.snap  rust_sitter_example__optionals__tests__optional_grammar-6.snap  rust_sitter_example__optionals__tests__optional_grammar-7.snap  rust_sitter_example__optionals__tests__optional_grammar-8.snap  rust_sitter_example__optionals__tests__optional_grammar.snap  rust_sitter_example__optionals__tests__optional_grammar.snap.new  rust_sitter_example__repetitions__tests__repetitions_grammar-2.snap  rust_sitter_example__repetitions__tests__repetitions_grammar-2.snap.new  rust_sitter_example__repetitions__tests__repetitions_grammar-3.snap  rust_sitter_example__repetitions__tests__repetitions_grammar.snap  rust_sitter_example__repetitions__tests__repetitions_grammar.snap.new  rust_sitter_example__repetitions__tests__repetitions_grammar2.snap  rust_sitter_example__repetitions__tests__repetitions_grammar3.snap  rust_sitter_example__words__tests__words_grammar-2.snap  rust_sitter_example__words__tests__words_grammar-3.snap  rust_sitter_example__words__tests__words_grammar-4.snap  rust_sitter_example__words__tests__words_grammar.snap  rust_sitter_example__words__tests__words_grammar.snap.new
macro/: Cargo.toml
macro/src/: expansion.rs  lib.rs
macro/src/snapshots/: rust_sitter_macro__tests__enum_prec_left.snap  rust_sitter_macro__tests__enum_recursive.snap  rust_sitter_macro__tests__enum_transformed_fields.snap  rust_sitter_macro__tests__enum_with_named_field.snap  rust_sitter_macro__tests__enum_with_unamed_vector.snap  rust_sitter_macro__tests__grammar_unboxed_field.snap  rust_sitter_macro__tests__spanned_in_vec.snap  rust_sitter_macro__tests__struct_extra.snap  rust_sitter_macro__tests__struct_optional.snap  rust_sitter_macro__tests__struct_repeat.snap
runtime/: Cargo.toml
runtime/src/: __private.rs  error.rs  extract.rs  grammar.rs  lib.rs  rule.rs
runtime/src/extract/: field.rs
tool/: Cargo.toml
tool/src/: expansion.rs  lib.rs
tool/src/snapshots/: rust_sitter_tool__tests__enum_conflicts_prec_dynamic.snap  rust_sitter_tool__tests__enum_prec_left.snap  rust_sitter_tool__tests__enum_recursive.snap  rust_sitter_tool__tests__enum_transformed_fields.snap  rust_sitter_tool__tests__enum_with_named_field.snap  rust_sitter_tool__tests__enum_with_unamed_vector.snap  rust_sitter_tool__tests__grammar_repeat.snap  rust_sitter_tool__tests__grammar_repeat1.snap  rust_sitter_tool__tests__grammar_repeat_no_delimiter.snap  rust_sitter_tool__tests__grammar_unboxed_field.snap  rust_sitter_tool__tests__grammar_with_extras.snap  rust_sitter_tool__tests__immediate.snap  rust_sitter_tool__tests__spanned_in_vec.snap  rust_sitter_tool__tests__struct_optional.snap
types/: Cargo.toml
types/src/: grammar.rs
