[package]
name = "rust-sitter-common"
description = "Shared logic for the Rust Sitter macro and tool"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version.workspace = true
authors.workspace = true
edition = "2024"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
syn = { version = "2", features = [ "full", "extra-traits" ] }
proc-macro2 = "1"
quote = "1"

serde_json = "1"
