[package]
name = "rust-sitter-example"
version.workspace = true
authors.workspace = true
edition = "2021"
publish = false

[features]
default = ["tree-sitter-standard"]
tree-sitter-c2rust = ["rust-sitter/tree-sitter-c2rust"]
tree-sitter-standard = ["rust-sitter/tree-sitter-standard"]

[dependencies]
rust-sitter = { path = "../runtime", default-features = false }
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"

[build-dependencies]
rust-sitter-tool = { path = "../tool" }

[dev-dependencies]
insta = "1.39"
wasm-bindgen-test = "0.3.0"
