[package]
name = "rust-sitter-example"
version.workspace = true
authors.workspace = true
edition = "2021"
publish = false

[dependencies]
rust-sitter = { path = "../runtime" }
codemap = "0.1.3"
codemap-diagnostic = "0.1.1"

[build-dependencies]
rust-sitter-tool = { path = "../tool" }

[dev-dependencies]
insta = "1.39"
wasm-bindgen-test = "0.3.0"
