[package]
name = "rust-sitter-macro"
description = "Procedural macros for Rust Sitter"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version.workspace = true
authors.workspace = true
edition = "2024"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { version = "2", features = [ "full", "extra-traits" ] }
quote = "1"
proc-macro2 = "1"
rust-sitter-common = { path = "../common" }

[dev-dependencies]
insta = "1.39"
tempfile = "3"
