[package]
name = "rust-sitter"
description = "A package for defining tree-sitter grammars alongside Rust logic"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version.workspace = true
authors.workspace = true
edition = "2024"
license = "MIT"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[lib]
path = "src/lib.rs"

[dependencies]
tree-sitter.workspace = true
rust-sitter-macro = { path = "../macro" }
# This one could be optional.
serde_json = "1"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
insta = "1.39"
tempfile = "3.2.0"
