[package]
name = "rust-sitter-tool"
description = "The external tool for Rust Sitter that extracts grammars from Rust definitions"
readme = "../README.md"
repository = "https://github.com/hydro-project/rust-sitter"
version.workspace = true
authors.workspace = true
license = "MIT"
edition = "2024"
keywords = ["parsing", "codegen"]
categories = ["development-tools"]

[dependencies]
syn = { version = "2", features = ["full", "extra-traits"] }
syn-inline-mod = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
rust-sitter-common = { path = "../common" }

tempfile = "3"
tree-sitter.workspace = true
tree-sitter-generate.workspace = true
cc = "1"

[dev-dependencies]
insta = "1"
